[project]
name = "gpylib"
version = "0.1.0"
packages = [
    { include = "gpylib", from = "src" }
]
description = ""
authors = [
    {name = "gildong"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
